[kio] Add trailing slash to device url

The absence of a trailing slash makes the QUrl's path field empty,
which make the url invalid.

BUG: 409179
(cherry picked from commit 1427e66a0dd74f2a73a2f7d8ac323643aa68fd0e)